style(PostDetail): force word break to prevent post detail overflow

--- a/src/components/data/Posts/PostDetail/PostDetail.module.css
+++ b/src/components/data/Posts/PostDetail/PostDetail.module.css
@@ -13,6 +13,7 @@
 .content {
     max-width: 100%;
     overflow-x: hidden;
+    word-break: break-word;
 }
 
 .title {
